app/src/main/java/com/example/mvvmclean/common/datalayer/remote/dto/error/ConnectionError.java
package com.example.mvvmclean.common.datalayer.remote.dto.error;

public class ConnectionError extends Throwable {
}
